--- a/templates/permisos/validarpermisos.html
+++ b/templates/permisos/validarpermisos.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
+{% load group_tags %}
 {% block content %}
 {% if messages %}
   {% for message in messages %}
@@ -76,11 +77,13 @@
 							</tbody>
 						</table>
 						<div class="pull-right">
-							{% if RRHH %}
-								<a href="{% url 'validarpermRRHH' permiso.id %}" class="btn btn-primary">Validar</a>
-							{% else %}
-								<a href="{% url 'validarperm' permiso.id %}" class="btn btn-primary">Validar</a>
-							{% endif %}
+								{% if RRHH %}
+									<a href="{% url 'validarpermRRHH' permiso.id %}" class="btn btn-primary">Validar</a>
+								{% elif Geren %}
+									<a href="{% url 'validarpermGeren' permiso.id %}" class="btn btn-primary">Validar</a>
+								{% else %}
+									<a href="{% url 'validarperm' permiso.id %}" class="btn btn-primary">Validar</a>
+								{% endif %}
 						</div>
 					</div>
 				</div>
