--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <head>
     <title>
     {% block title %}
-      SIMCOPV Admin
+      SICOP Admin
     {% endblock title %}
     </title>
     <!-- Tell the browser to be responsive to screen width -->
@@ -88,14 +88,13 @@
                   <!-- Menu Footer-->
                   <li class="user-footer">
                     <div class="pull-right">
-                      <a href="{% url 'logout' %}" class="btn btn-default btn-flat">Salir</a>
+                        <a href="{% url 'logout' %}" class="btn btn-default btn-flat">
+                            <span class="glyphicon glyphicon-off"></span>
+                            Salir
+                        </a>
                     </div>
                   </li>
                 </ul>
-              </li>
-              <!-- Control Sidebar Toggle Button -->
-              <li>
-                <a href="#" data-toggle="control-sidebar"><i class="glyphicon glyphicon-cog"></i></a>
               </li>
             </ul>
           </div>
@@ -235,69 +234,6 @@
           {% endblock %}
         </section><!-- /.content -->
       </div><!-- /.content-wrapper -->
-      <!-- Control Sidebar -->      
-      <aside class="control-sidebar control-sidebar-dark">                
-        <!-- Create the tabs -->
-        <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
-          <li class="active"><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="glyphicon glyphicon-star"></i></a></li>
-          <li><a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="glyphicon glyphicon-cog"></i></a></li>
-        </ul>
-        <!-- Tab panes -->
-        <div class="tab-content">
-          <!-- Home tab content -->
-          <div class="tab-pane active" id="control-sidebar-home-tab">
-            <h3 class="control-sidebar-heading">Recent Activity</h3>
-            <ul class='control-sidebar-menu'>
-              <li>
-                <a href='javascript::;'>
-                  <i class="menu-icon fa fa-birthday-cake bg-red"></i>
-                  <div class="menu-info">
-                    <h4 class="control-sidebar-subheading">Langdon's Birthday</h4>
-                    <p>Will be 23 on April 24th</p>
-                  </div>
-                </a>
-              </li>              
-            </ul><!-- /.control-sidebar-menu -->
-
-            <h3 class="control-sidebar-heading">Tasks Progress</h3> 
-            <ul class='control-sidebar-menu'>
-              <li>
-                <a href='javascript::;'>               
-                  <h4 class="control-sidebar-subheading">
-                    Custom Template Design
-                    <span class="label label-danger pull-right">70%</span>
-                  </h4>
-                  <div class="progress progress-xxs">
-                    <div class="progress-bar progress-bar-danger" style="width: 70%"></div>
-                  </div>                                    
-                </a>
-              </li>                         
-            </ul><!-- /.control-sidebar-menu -->         
-
-          </div><!-- /.tab-pane -->
-          <!-- Stats tab content -->
-          <div class="tab-pane" id="control-sidebar-stats-tab">Stats Tab Content</div><!-- /.tab-pane -->
-          <!-- Settings tab content -->
-          <div class="tab-pane" id="control-sidebar-settings-tab">            
-            <form method="post">
-              <h3 class="control-sidebar-heading">General Settings</h3>
-              <div class="form-group">
-                <label class="control-sidebar-subheading">
-                  Report panel usage
-                  <input type="checkbox" class="pull-right" checked />
-                </label>
-                <p>
-                  Some information about this general settings option
-                </p>
-              </div><!-- /.form-group -->
-            </form>
-          </div><!-- /.tab-pane -->
-        </div>
-      </aside><!-- /.control-sidebar -->
-      <!-- Add the sidebar's background. This div must be placed
-           immediately after the control sidebar -->
-      <div class='control-sidebar-bg'></div>
-
     </div><!-- ./wrapper -->
     <div class="modal fade" id="usuario-pass">
       <div class="modal-dialog">
