--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Portal de Gestion de Permisos y Vacaciones</title>
+		<title>Portal de Control de Permisos</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<!--<meta charset="utf-8">-->
@@ -55,7 +55,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand logo-st" href="{% url 'index' %}">SIMCOPV</a>
+					<a class="navbar-brand logo-st" href="{% url 'index' %}">SICOP</a>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="navbar-collapse-1">
@@ -116,7 +116,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="footer">
 			<div class="container">
 				<div class="footer-text">
-				<h3><a href="index.html">APPB - Autoridad Portuaria de Puerto Bolívar</a></h3>
+				<h3><a href="#">APPB - Autoridad Portuaria de Puerto Bolívar</a></h3>
 				</div>
 			</div>
 		</div>
